[package]
name = "slice_mip"
version = "1.0.0"
authors = ["Mick Koch <mick@kochm.co>"]
description = "Mutate a slice in place with a map function"
license = "MIT"
documentation = "https://docs.rs/slice_mip"
repository = "https://github.com/kchmck/slice_mip.rs"
keywords = ["slice", "map", "in", "place"]
